--- a/InplayBet.Web/Views/RegisterUser/_SignUp.cshtml
+++ b/InplayBet.Web/Views/RegisterUser/_SignUp.cshtml
@@ -13,9 +13,18 @@
 {
     <ul class="query-list">
         <li>
-            <label>User Id: (must be alpha numeric and minimum length 8)</label>
-            @Html.ValidationMessageFor(m => m.FirstName)
-            @Html.TextBoxFor(m => m.UserId)
+            @if (Model.UserKey > 0)
+            {
+                <label>User Id:</label>
+                <span>@Model.UserId</span>
+                @Html.HiddenFor(m => m.UserId)
+            }
+            else
+            {
+                <label>User Id: (must be alpha numeric and minimum length 8)</label>
+                @Html.ValidationMessageFor(m => m.FirstName)
+                @Html.TextBoxFor(m => m.UserId)
+            }
         </li>
         <li>
             <label>First Name:</label>
@@ -29,8 +38,16 @@
         </li>
         <li>
             <label>Email Address:</label>
-            @Html.ValidationMessageFor(x => x.EmailId)
-            @Html.TextBoxFor(m => m.EmailId)
+            @if (Model.UserKey > 0)
+            {
+                <span>@Model.EmailId</span>
+                @Html.HiddenFor(m => m.EmailId)
+            }
+            else
+            {
+                @Html.ValidationMessageFor(x => x.EmailId)
+                @Html.TextBoxFor(m => m.EmailId)
+            }
         </li>
         <li>
             <label>Currency:</label>
@@ -74,10 +91,13 @@
         </li>
     </ul>
 
+    @Html.HiddenFor(m => m.UserKey)
     @Html.HiddenFor(m => m.UserId)
     @Html.HiddenFor(m => m.AvatarPath)
     @Html.HiddenFor(m => m.StatusId)
     @Html.HiddenFor(m => m.CreatedOn)
     @Html.HiddenFor(m => m.CreatedBy)
     @Html.HiddenFor(m => m.IsAdmin)
+    @Html.HiddenFor(m => m.UpdatedBy)
+    @Html.HiddenFor(m => m.UpdatedOn)
 }
