--- a/InplayBet.Web/Views/Shared/_Layout.cshtml
+++ b/InplayBet.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <script type="text/javascript">
         @(Html.JsMinify(@<text>
         var VirtualDirectory = '@Url.Content("~/")';
+        var avaterImage = '@Url.Content("~/Images/Users/Default.jpg")';
         var loadingCounter = 0;
         </text>))
     </script>
