--- a/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
+++ b/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
@@ -6,7 +6,7 @@
 <div class="nav-container">
     <div class="center">
         <ul class="nav">
-            <li id="lnkHome" class="active"><a href="@Url.Content("~/")Home">Home</a>@*@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)*@</li>
+            <li id="lnkHome" class="active"><a href="@Url.Content("~/")Home">Home</a></li>
             <li id="lnkHowToPlay">@Html.ActionLink("How To Play", "Index", "HowToPlay", new { area = "" }, null)</li>
             <li id="lnkRanking">@Html.ActionLink("Ranking", "Index", "Ranking", new { area = "" }, null)</li>
             <li id="lnkLatestBets">@Html.ActionLink("Latest Bets", "Index", "LatestBets", new { area = "" }, null)</li>
