--- a/InplayBet.Web/Views/Shared/_Layout.cshtml
+++ b/InplayBet.Web/Views/Shared/_Layout.cshtml
@@ -23,15 +23,16 @@
     @Html.RenderScripts("~/Scripts/CommonScript")
     @if (HttpContext.Current.Request.Url.AbsolutePath.Contains("MemberProfile")
         && SessionVeriables.GetSessionData<int>(SessionVeriables.UserKey) > 0)
-    { @Html.RenderScripts("~/Scripts/NormalValidation"); }
+    { @Html.RenderScripts("~/Scripts/NormalValidation");
+    }
     else
-    { @Html.RenderScripts("~/Scripts/AjaxValidation"); }
+    { @Html.RenderScripts("~/Scripts/AjaxValidation");
+    }
     @Html.RenderScripts("~/Scripts/MainScript")
     @RenderSection("PageScript", false)
 
     <script type="text/javascript" src='@Url.Action("AppConfigData", "Base")'></script>
 </head>
-
 <body>
     <div class="loading-overlay">
         <img src="@Url.Content("~/Styles/Images/loadingAnimation.gif")" alt="Loading ..." />
@@ -47,15 +48,20 @@
                 @{Html.RenderPartial("_SignIn", (new SignInModel()));}
             </div>
             <div class="header-botm">
-                <div class="logo"><a href="#"><img src='@Url.Content("~/Styles/images/logo.png")' alt="" /></a></div>
-                <div class="header-img"><img src='@Url.Content("~/Styles/images/header-img.png")' alt="" /></div>
+                <div class="logo">
+                    <a href="#">
+                        <img src='@Url.Content("~/Styles/images/logo.png")' alt="" />
+                    </a>
+                </div>
+                <div class="header-img">
+                    <img src='@Url.Content("~/Styles/images/header-img.png")' alt="" />
+                </div>
             </div>
         </div>
     </div>
     @{Html.RenderPartial("_TopNavigation");}
     @RenderBody()
     @{Html.RenderPartial("_BottomNavigation");}
-
     <div id="dataloading" class="data_loading">
         <div class="loading-image"></div>
         <div class="loading-text"></div>
