--- a/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
@@ -26,13 +26,13 @@
                     <div class="left-input">
                         @Html.HiddenFor(m => m.TeamAId)
                         <input type="text" name="" id="txtTesmA" value="">
-                        <a href="#" class="btn">+</a>
+                        <a href="javascript:void();" class="btn">+</a>
                     </div>
                     <span class="vs">vs</span>
                     <div class="left-input">
                         @Html.HiddenFor(m => m.TeamBId)
                         <input type="text" name="" id="txtTesmB" value="">
-                        <a href="#" class="btn">+</a>
+                        <a href="javascript:void();" class="btn">+</a>
                     </div>
                 </li>
                 <li>
@@ -40,7 +40,7 @@
                     <div class="input-full-outer">
                         @Html.HiddenFor(m => m.LegueId)
                         <input type="text" name="" id="txtLegue" class="full" value="">
-                        <a href="#" class="btn">+</a>
+                        <a href="javascript:void();" class="btn">+</a>
                     </div>
                 </li>
                 <li>
