--- a/InplayBet.Web/Views/Ranking/Index.cshtml
+++ b/InplayBet.Web/Views/Ranking/Index.cshtml
@@ -15,6 +15,8 @@
     <div class="container">
         @if(!Model.IsEmptyCollection())
         {
+            @Html.Hidden("TotalRecord", (int)ViewBag.TotalRecord, new { id = "TotalRecord" })
+            @Html.Hidden("PageSize", (int)ViewBag.PageSize, new { id = "PageSize" })
             <div class="rank-pagger"></div>
             @Html.Partial("_UserRank", Model, new ViewDataDictionary { { "LastElement", 3 } })
             <div class="rank-pagger"></div>
