--- a/InplayBet.Web/Views/ContactUs/Index.cshtml
+++ b/InplayBet.Web/Views/ContactUs/Index.cshtml
@@ -29,6 +29,8 @@
             </li>
         </ul>
     </div>
-    <div class="contact-img"><img src="images/contact-icon.jpg" alt=""></div>
+    <div class="contact-img">
+        <img src='@Url.Content("~/Styles/images/contact-icon.jpg")' alt="">
+    </div>
     @{Html.RenderPartial("_PromoBanner");}
 </div>
