--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -25,9 +25,9 @@
                     }
                 </div>
                 <div class="detail-block">
-                    <p class="left">Wins @Model.Wins</p>
-                    <p class="left">Losses @Model.Losses</p>
-                    <p class="left">Winning Bets @Model.WinningBets</p>
+                    <p class="left">Total Wins @Model.Wins</p>
+                    <p class="left">Total Lost @Model.Losses</p>
+                    <p class="left">Winning Bets @Model.BetWins</p>
                     <p class="left">Won @Model.Won</p>
                     <p class="left">Placed -@Model.Placed.ToString("C", (new CultureInfo(Model.CultureCode)))</p>
                     <p class="left">Profit @Model.Profit.ToString("C", (new CultureInfo(Model.CultureCode)))</p>
