--- a/InplayBet.Web/Views/Bet/ShowChallengeStatusMessage.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowChallengeStatusMessage.cshtml
@@ -7,7 +7,7 @@
     <div style="width:70%; float:left;display:block;">
         @if ((string)ViewBag.Status == StatusCode.Won.ToString())
         {
-            <span style="font-size: 15px;">Congratulation! You own the challenge. Please proceed to the next challenge.</span>
+            <span style="font-size: 15px;">Congratulation! You have won the challenge. Please proceed to the next challenge.</span>
         }
         else
         {
