--- a/InplayBet.Web/Styles/style.css
+++ b/InplayBet.Web/Styles/style.css
@@ -5,7 +5,7 @@
 p, h1, h2, h3, h4, h5, h6 {margin:0; padding:0;}
 ul, li {list-style:none;}
 body {background:#030b1b url(images/main-bg.jpg) top center / cover no-repeat; font:400 13px/21px 'Roboto'; color:#6a6a6a; margin:0; padding:0;}
-.header {float:left; background:url(images/header-bg.png) 0 0 repeat;}
+.header {float:left; background:url(images/header-bg.png) 0 0 repeat; width:100%;}
 .center {width:1200px; margin:0 auto;}
 .header-top {width:100%; float:left; padding:12px 0; border-bottom:1px solid #1f3248;}
 .header-top ul.social {margin:0; padding:0;}
@@ -33,7 +33,7 @@ body {background:#030b1b url(images/main-bg.jpg) top center / cover no-repeat; f
 .logo {float:left; width:auto;}
 .header-img {float:right; width:auto;}
 
-.nav-container {float:left; background:#63b222;}
+.nav-container {float:left; background:#63b222; width:100%;}
 .nav-container ul.nav {margin:0; padding:0;}
 .nav-container ul.nav li {margin:0; padding:0; list-style:none; background:url(images/nav-devider.gif) 0 0 no-repeat; float:left;}
 .nav-container ul.nav li a {display:block; font-size:15px; color:#fff; text-transform:uppercase; padding:0 20px; margin:0; text-decoration:none; line-height:62px; -webkit-transition: all 0.3s ease-in; -moz-transition: all 0.3s ease-in; transition: all 0.3s ease-in;}
@@ -205,7 +205,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#545455', end
 .registration-block {width:76%; float:left; margin:0 10%; padding:2%; border:2px solid #c7c7c7;}
 .registration-block:hover {border:2px solid #63b222; -webkit-transition: all 0.3s ease-in; -moz-transition: all 0.3s ease-in; transition: all 0.3s ease-in;}
 .registration-block h2.query-heading {float:none; width:auto;}
-.registration-block select {width:20%; float:left; border:1px solid #d8d8d8; margin-right:2%; color:#6a6a6a; font-size:15px; line-height:21px; padding:1%;}
+.registration-block .dob, .registration-block .iam {width:20%; margin-right:2%; float:left;}
+.registration-block .dob select, .registration-block .iam select {width:98%; float:left; border:1px solid #d8d8d8; margin-right:0; color:#6a6a6a; font-size:15px; line-height:21px; padding:4%;}
+.registration-block select {width:30%; float:left; border:1px solid #d8d8d8; margin-right:0; color:#6a6a6a; font-size:15px; line-height:21px; padding:1%;}
 .registration-block select:focus {border:1px solid #63b222; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; transition: all 0.4s ease; background:#f6f7f7;}
 .registration-block select.year {width:30%; float:left; border:1px solid #d8d8d8; margin-right:2%; color:#6a6a6a; font-size:15px; line-height:21px; padding:1%;}
 .registration-block select.year:focus {border:1px solid #63b222; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; transition: all 0.4s ease; background:#f6f7f7;}
@@ -255,7 +257,7 @@ ul.popup li label.right {width:50%;}
 ul.popup li input[type="text"] {border:1px solid #d8d8d8; float:left; margin:0; width:93%; padding:4%; font-size:15px; line-height:15px; color:#6a6a6a;}
 ul.popup li input[type="text"]:focus {border:1px solid #63b222; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; transition: all 0.4s ease; background:#f6f7f7;}
 ul.popup li span.vs {padding:0 22px; float:left; font-size:15px;font-weight: bold;}
-ul.popup li span {padding:0; float:left; font-size:12px;font-weight:normal;}
+ul.popup li span {padding:0; float:none; font-size:12px;font-weight:normal;}
 .input-full-outer {width:60%; float:left; position:relative;}
 ul.popup li input[type="text"].full {border:1px solid #d8d8d8; width:99%; padding:2%; font-size:15px; line-height:15px; color:#6a6a6a;}
 ul.popup li input[type="text"].full:focus {border:1px solid #63b222; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; transition: all 0.4s ease; background:#f6f7f7;}
@@ -277,7 +279,7 @@ background: linear-gradient(to bottom, #545455 0%,#1b1b1b 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#545455', endColorstr='#1b1b1b',GradientType=0 ); /* IE6-9 */}
 
 .input-full-outer ul.popup li a.btn {right:-38px;}
-ul.popup li a.btn {font-size:16px; font-weight:700; color:#fff; text-decoration:none; background:#000; margin:0; padding:4px 5px; float:left; margin:0 4px; position:absolute; top:0; right:-25px;}
+ul.popup li a.btn {font-size:16px; font-weight:700; color:#fff; text-decoration:none; background:#000; margin:0; padding:1px 5px; float:left; margin:0 4px; position:absolute; top:0; right:-25px;}
 ul.popup li a.btn:hover {color:#fff; text-decoration:none; background:#63b222;}
 ul.popup li input[type="radio"] {width:5%; margin:9px 0 0 0;}
 
@@ -313,7 +315,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#545455', end
 .loading-overlay{position:fixed;height:100%;width:100%;background-color:#e7e7e7;z-index:9999}
 .loading-overlay img{display:block;margin:0 auto;max-height:100%;max-width:100%;top: 50%;position: absolute; left: 50%;}
 /*------------------------- Popup CSS End---------------------------------*/
-
+.follow-link {display:block;float:left;width:26px;height:26px;background-repeat:no-repeat;}
 
 .yellow-box .popup-border {border:2px solid #d4be00; width:526px; margin-right:10px; min-height:320px;}
 ul.popup li input[type="submit"] {float:left; margin:0 10px 0 0;}
@@ -323,4 +325,29 @@ ul.popup li input[type="submit"] {float:left; margin:0 10px 0 0;}
 
 .green-box .popup-border {border:2px solid #60cd06; width:526px; margin-right:10px;}
 .green-box ul.popup li label {color:#fff;}
+
+.cropped a {color:#63b222; text-decoration:none;}
+.cropped a:hover {color:#000; text-decoration:none;}
+
+.cropcontainer {float:left;}
+.cropcontainer .action input#uploadFile {width:140px;}
+ .cropcontainer .action input#btnCrop {width:70px; color:#fff;}
+ .cropcontainer .action input#btnZoomIn {width:40px; color:#fff;}
+ .cropcontainer .action input#btnZoomOut {width:40px; color:#fff;}
+ .cropcontainer .action input[type="button"] {margin-left:3px !important;}
+ .mp-block .top .name-block a {text-decoration:none; color:#63b222;}
+ .mp-block .top .name-block a:hover {text-decoration:underline; color:#000;}
  
+ ul.popup li .left-input input[type="text"] {width:89%;}
+ ul.leadbroad-block li .block-top .points p.right a {text-decoration:none; color:#0099FF;}
+ ul.leadbroad-block li .block-top .points p.right a:hover {text-decoration:none; color:#000;}
+ 
+ 
+ul.latest-bets {margin:0; padding:0;}
+ul.latest-bets li {margin:5px 0; padding:0; float:left; width:100%;}
+ul.latest-bets li label {float:left; width:35%; font-size:14px; font-weight:bold;}
+ul.latest-bets li .right-content {width:63%; float:right; font-size:14px;} 
+ul.latest-bets li .right-content p {font-size:14px; line-height:21px;}
+ul.latest-bets li .right-content span {padding:0 10px;}
+ul.latest-bets li .right-content p.team {font-size:14px; line-height:21px; float:left;}
+ul.latest-bets li .right-content span.vs {font-size:14px; line-height:21px; float:left; padding:0 8px; font-weight:700}
