--- a/InplayBet.Web/Views/Shared/_UserRank.cshtml
+++ b/InplayBet.Web/Views/Shared/_UserRank.cshtml
@@ -45,7 +45,7 @@
                     <p class="join">Ranking: @user.Rank</p>
                     <div class="clear"></div>
                     <div class="points">
-                        <p class="left">Followers : <i id="@id">@user.Followers</i></p>
+                        <p class="left">Followers : <i class="follow-count" id="@id">@user.Followers</i></p>
                         <p class="right">
                             @if (follow > 0)
                             {
